--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "hw-backend-5"
+name = "hw-backend-6"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -7,13 +7,15 @@ readme = "README.md"
 packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 fastapi = "^0.100.0"
+jwt = "^1.3.1"
 uvicorn = "^0.22.0"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 attrs = "^23.1.0"
+pyjwt = "^2.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
