--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 fastapi = "^0.100.0"
 uvicorn = "^0.22.0"
 jinja2 = "^3.1.2"
@@ -15,7 +15,9 @@ python-multipart = "^0.0.6"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 attrs = "^23.1.0"
 pyjwt = "^2.8.0"
-                                                                                                                                                                                                                                                                                                
+sqlalchemy = "^2.0.19"
+alembic = "^1.11.1"
+                                                                                                                                                                                                                                                                  
 
 
 [tool.poetry.group.dev.dependencies]
